# aegis-sdk

./: README
aegis-cpp/: CMakeLists.txt  flake.nix
aegis-cpp/example/: market_data.cpp
aegis-cpp/include/aegis/: client.hpp  component.hpp  protocol.hpp
aegis-cpp/src/: client.cpp  protocol.cpp
aegis-go/: flake.nix  go.mod
aegis-go/aegis/: client.go  config.go  logger.go  protocol.go  stream.go
aegis-go/example/: main.go
aegis-ocaml/: aegis-component.opam  dune-project  flake.nix
aegis-ocaml/example/: dune  main.ml
aegis-ocaml/lib/: client.ml  config.ml  dune  protocol.ml
aegis-python/: example.py  flake.nix  pyproject.toml
aegis-python/aegis_component/: __init__.py  client.py  log.py  protocol.py
aegis-rust/: Cargo.toml  flake.nix
aegis-rust/examples/: market_data.rs
aegis-rust/src/: component.rs  config.rs  data_stream.rs  error.rs  lib.rs  protocol.rs
